# pkmai

./: .gitignore  README.md  config.example.yaml  pyproject.toml  run_server.py
.github/workflows/: ci.yml  release.yml
pkmai-bridge/: manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
pkmai-bridge/src/: main.ts  settings.ts
src/pkmai/: cli.py
src/pkmai/api/: server.py
src/pkmai/core/: config.py  logger.py  utils.py
src/pkmai/db/: author_cache.py  connection.py  embed_cache.py
src/pkmai/embeddings/: embedder.py
src/pkmai/llm/: base.py  llama_cpp_provider.py  manager.py
src/pkmai/tasks/: author_mirror_notes.py  auto_links.py  cleanup.py
